--- a/Udemy/JavaSpring/guess-the-number-game/console/pom.xml
+++ b/Udemy/JavaSpring/guess-the-number-game/console/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>core</artifactId>
+    <artifactId>console</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -17,28 +17,18 @@
     </properties>
 
     <dependencies>
-<!--        no need to specify dependency version because it already gets it from parent (it is imported there)-->
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <groupId>org.example</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-        </dependency>
+<!--        no need to add logback and spring dependencies here because they are added to core, and core is added to here - transitive dependency-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
-
     </dependencies>
 
 </project>
