--- a/Udemy/JavaSpring/guess-the-number-game/pom.xml
+++ b/Udemy/JavaSpring/guess-the-number-game/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>core</module>
+        <module>console</module>
     </modules>
     <!--    needed to do for the parent project, to override default jar packaging-->
     <packaging>pom</packaging>
@@ -19,6 +20,7 @@
         <logback.version>1.2.7</logback.version>
         <spring.version>5.3.13</spring.version>
         <annotation-api.version>1.3.2</annotation-api.version>
+        <lombok.version>1.18.22</lombok.version>
     </properties>
 
     <dependencyManagement>
@@ -48,6 +50,14 @@
                 <version>${annotation-api.version}</version>
             </dependency>
 
+            <!-- Lombok -->
+            <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
